--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
+:root {
+  --alineado: center;
+  --colortitulo2: #099d8d;
+  --interlineadotitulo: 45px;
+  --colortexto: #54585a;
+  --interlineadotexto: 24px;
+  --coolgrey: #b8b8b9;
+}
 .header {
   max-width: 768px;
 }
@@ -24,7 +32,32 @@
   font-family: rubik;
   text-transform: uppercase;
 }
-.cuerpo {
+
+.fortalezas {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: 30px;
+  margin: 504px 0 0;
+  padding: 30px 15px 45px;
+  background-color: var(--coolgrey);
+  opacity: 0.2;
+  text-align: var(--alineado);
+}
+.articulo {
+  height: 50%;
+}
+.title {
+  display: inline-block;
+  font-size: 22px;
+  color: var(--colortitulo2);
+  line-height: var(--interlineadotitulo);
+  height: 15px;
+}
+.parrafo {
+  font-size: 16px;
+  color: var(--colortexto);
+  line-height: var(--interlineadotexto);
   margin-left: 15px;
   margin-right: 15px;
 }
@@ -36,4 +69,36 @@
 .photo {
   width: 180px;
   height: 180px;
+}
+.footer {
+  display: block;
+  height: 250px;
+  margin: 250px 0 0;
+  padding: 30px 74px 45px;
+  border: solid 1px var(--coolgrey);
+  background-color: white;
+  text-align: var(--alineado);
+}
+.copy {
+  color: var(--coolgrey);
+  height: 20px;
+  font-family: openSans;
+  font-size: 14px;
+  line-height: 20px;
+}
+.navegadorfooter {
+  font-size: 14px;
+  text-transform: uppercase;
+  line-height: 20px;
+  color: var(--colortexto);
+  text-decoration: none;
+  display: flex;
+
+  justify-content: space-around;
+  width: 100%;
+  font-size: 16px;
+  color: white;
+  background-color: aqua;
+  font-family: rubik;
+  text-transform: uppercase;
 }
