--- a/css/style.css
+++ b/css/style.css
@@ -34,10 +34,6 @@
 }
 
 .fortalezas {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  margin-top: 30px;
   margin: 504px 0 0;
   padding: 30px 15px 45px;
   background-color: var(--coolgrey);
@@ -87,18 +83,16 @@
   line-height: 20px;
 }
 .navegadorfooter {
+  display: flex;
+  flex-direction: column;
+  margin: 20px 29px 30px;
   font-size: 14px;
+  font-weight: 600;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.43;
+
   text-transform: uppercase;
   line-height: 20px;
   color: var(--colortexto);
-  text-decoration: none;
-  display: flex;
-
-  justify-content: space-around;
-  width: 100%;
-  font-size: 16px;
-  color: white;
-  background-color: aqua;
-  font-family: rubik;
-  text-transform: uppercase;
 }
