--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,8 @@
   font-stretch: normal;
   font-style: normal;
   line-height: 1.43;
-
+  color: var(--colortexto);
+  opacity: 0.75;
   text-transform: uppercase;
   line-height: 20px;
   color: var(--colortexto);
