--- a/css/reset.css
+++ b/css/reset.css
@@ -90,6 +90,7 @@ video {
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
+  color: inherit;
 }
 /* HTML5 display-role reset for older browsers */
 article,
@@ -126,4 +127,7 @@ q:after {
 table {
   border-collapse: collapse;
   border-spacing: 0;
+}
+A {
+  text-decoration: none;
 }
