--- a/css/style.css
+++ b/css/style.css
@@ -9,18 +9,56 @@
   --coolgrey-light: rgba(184, 184, 185, 0.2);
 }
 .header {
-  max-width: 768px;
   background-image: url(../images/altavoz-barato-1-2-3.webp);
   width: 100%;
   height: 420px;
+  background-position: center;
+}
+.equipo {
+  display: flex;
+  padding: 46px 86.5px 0px;
+  font-family: "rubik", sans-serif;
+  font-size: 24px;
+  line-height: var(--interlineadotexto);
+  justify-content: center;
+  color: aqua;
+
+  text-transform: uppercase;
+}
+.equipo1 {
+  display: flex;
+  flex-direction: column;
+  padding: 30px, 15px, 90px;
+  justify-content: center;
+  font-family: "Rubik", sans-serif;
+  height: 384px;
+  width: 100%;
+
+  line-height: var(--interlineadotexto);
 }
 body {
+  max-width: 768px;
   text-align: var(--alineado);
 }
 .lema_titulo {
   display: flex;
+  justify-content: center;
+  align-items: center;
+
+  padding: 14px 15px 16px;
+  height: 50px;
+
+  font-family: "Open Sans", sans-serif;
+  font-weight: 600;
+}
+.textoequipo {
+  display: flex;
   flex-direction: column;
-  padding: 15px;
+  justify-content: center;
+  padding: 30px 15px 45px;
+  font-family: "Open Sans", sans-serif;
+  font-size: 16px;
+  line-height: var(--interlineadotexto);
 }
 .nombredelequipo {
   display: flex;
@@ -28,9 +66,8 @@ body {
   justify-content: center;
   height: 60px;
   width: 100%;
-
   background-color: var(--colortitulo2-1);
-  font-family: rubik;
+  font-family: "Rubik", sans-serif;
   text-transform: uppercase;
 }
 .nombre {
@@ -47,13 +84,12 @@ body {
   font-size: 16px;
   color: white;
   background-color: rgba(0, 255, 255, 0.9);
-  font-family: rubik;
+  font-family: "Rubik", sans-serif;
   text-transform: uppercase;
   align-items: center;
 }
 
 .fortalezas {
-  font-family: "open sans";
   margin: 50px 0 0;
   padding: 30px 15px 45px;
   background-color: var(--coolgrey-light);
@@ -65,41 +101,67 @@ body {
 }
 .title {
   display: inline-block;
+  font-family: "Rubik", sans-serif;
   font-size: 22px;
+  font-weight: 600;
   color: var(--colortitulo2);
   line-height: var(--interlineadotitulo);
 }
-.fortalezas {
-  margin: 50px 0 0;
-  padding: 30px 15px 45px;
-  background-color: var(--coolgrey-light);
-  text-align: var(--alineado);
-}
-.articulo {
-  height: 50%;
-}
-.title {
-  display: inline-block;
-  font-size: 22px;
-  color: var(--colortitulo2);
-  line-height: var(--interlineadotitulo);
-}
+
 .parrafo {
   font-size: 16px;
   color: var(--colortexto);
   line-height: var(--interlineadotexto);
   margin-left: 15px;
   margin-right: 15px;
+  font-family: "Open Sans", sans-serif;
 }
 
 .quienessomos {
+  font-family: "Rubik", sans-serif;
+  font-size: 24px;
+  line-height: var(--interlineadotitulo);
+  color: var(--colortitulo2);
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: center;
   text-align: center;
+  align-items: center;
+  margin: 15px;
+}
+
+.description {
+  width: 100%;
+  color: #54585a;
+  line-height: var(--interlineadotexto);
+  font-size: 16px;
+  font-family: "Open Sans", sans-serif;
 }
 
 .photo {
-  width: 180px;
-  height: 180px;
+  max-width: 180px;
+  max-height: 180px;
+  border-radius: 4px;
+  border: solid 5px rgba(0, 0, 0, 0.08);
 }
+.names {
+  text-align: center;
+  font-family: "Open Sans", sans-serif;
+  font-size: 20px;
+  color: black;
+  line-height: 45px;
+}
+
+.icons {
+  align-items: center;
+  color: #099d8d;
+  size: 16px;
+  padding: 30px;
+  margin-bottom: 10px;
+  line-height: 30px;
+}
+
 .footer {
   display: flex;
   flex-direction: column;
@@ -123,12 +185,15 @@ body {
   margin: 20px 29px 30px;
   font-size: 14px;
   font-weight: 600;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: 1.43;
+  font-family: "Open Sans", sans-serif;
   color: var(--colortexto);
   opacity: 0.75;
   text-transform: uppercase;
-  line-height: 20px;
-  color: var(--colortexto);
+  line-height: 20px;''
+}
+.logo{
+  width: 116px;
+  height: 45px;
+  text-align: center;
+  
 }
