--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,6 @@
   line-height: var(--interlineadotexto);
   justify-content: center;
   color: aqua;
-
   text-transform: uppercase;
 }
 .equipo1 {
@@ -43,13 +42,17 @@ body {
 .lema_titulo {
   display: flex;
   justify-content: center;
-  align-items: center;
-
+  background-color: white;
   padding: 14px 15px 16px;
   height: 50px;
-
   font-family: "Open Sans", sans-serif;
   font-weight: 600;
+  text-align: center;
+  position: relative;
+  top: -30px;
+  width: 85%;
+  right: 5%;
+  left: 5%;
 }
 .textoequipo {
   display: flex;
@@ -189,11 +192,10 @@ body {
   color: var(--colortexto);
   opacity: 0.75;
   text-transform: uppercase;
-  line-height: 20px;''
+  line-height: 20px;
 }
-.logo{
+.logo {
   width: 116px;
   height: 45px;
   text-align: center;
-  
 }
