--- a/css/style.css
+++ b/css/style.css
@@ -33,23 +33,22 @@
   line-height: var(--interlineadotexto);
 }
 body {
-  max-width: 768px;
   text-align: var(--alineado);
 }
 .lema_titulo {
   display: flex;
   justify-content: center;
-  text-align: center;
+  align-items: center;
   position: relative;
+  box-sizing: border-box;
   background-color: white;
   padding: 14px 15px 16px;
   font-size: 18px;
   font-family: "Open Sans", sans-serif;
   font-weight: 600;
-  top: -40px;
-  width: 85%;
-  height: 50px;
-  right: 4%;
+  top: -30px;
+  width: 90%;
+  right: 3%;
   left: 3%;
 }
 .textoequipo {
