--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,8 @@ body {
 .equipo {
   display: flex;
   justify-content: center;
-  padding: 0px 86.5px 15px;
+  box-sizing: border-box;
+  padding: 30px 0px 15px 0px;
   font-family: "rubik", sans-serif;
   font-size: 24px;
   line-height: var(--interlineadotexto);
@@ -88,7 +89,6 @@ body {
 .textoequipo {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   padding: 30px 15px 90px;
   font-family: "Open Sans", sans-serif;
   font-size: 16px;
