--- a/css/style.css
+++ b/css/style.css
@@ -29,8 +29,8 @@ body {
 }
 
 .header {
+  background-size: cover;
   background-image: url(../images/altavoz-barato-1-2-3.webp);
-  background-position: center;
   width: 100%;
   height: 421px;
 }
@@ -203,4 +203,10 @@ body {
   width: 116px;
   height: 45px;
   text-align: center;
+}
+
+@media all and (min-width: 768px) {
+  .equipo {
+    padding-top: 45px;
+  }
 }
