--- a/css/style.css
+++ b/css/style.css
@@ -206,6 +206,14 @@ body {
 }
 
 @media all and (min-width: 768px) {
+  .hero {
+    position: relative;
+    top: -80px;
+    padding: 15px 30px 15px 30px;
+    width: 441px;
+    height: 80px;
+    opacity: 0.8;
+  }
   .equipo {
     padding-top: 45px;
   }
