--- a/css/style.css
+++ b/css/style.css
@@ -208,8 +208,9 @@ body {
 @media all and (min-width: 768px) {
   .nombre {
     position: relative;
-
-    color: pink;
+    box-sizing: border-box;
+    position: relative;
+    font-size: 16px;
   }
   .enlaces {
     box-sizing: border-box;
