--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,11 @@
   --coolgrey-light: rgba(184, 184, 185, 0.2);
 }
 
+body {
+  max-width: 768px;
+  text-align: var(--alineado);
+}
+
 .header {
   background-image: url(../images/altavoz-barato-1-2-3.webp);
   background-position: center;
@@ -34,11 +39,6 @@
   font-family: "Rubik", sans-serif;
   width: 100%;
   line-height: var(--interlineadotexto);
-}
-
-body {
-  max-width: 768px;
-  text-align: var(--alineado);
 }
 
 .lema_titulo {
@@ -215,4 +215,145 @@ body {
   width: 116px;
   height: 45px;
   text-align: center;
+}
+
+/*Tablet*/
+@media all and (min-width: 768px) {
+  .fortalezas {
+    flex-direction: row;
+  }
+  .rombo {
+  }
+
+  .articulo {
+    height: 50%;
+  }
+  .title {
+    display: inline-block;
+    font-family: "Rubik", sans-serif;
+    font-size: 22px;
+    font-weight: 600;
+    color: var(--colortitulo2);
+    line-height: var(--interlineadotitulo);
+  }
+
+  .parrafo {
+    font-size: 16px;
+    color: var(--colortexto);
+    line-height: var(--interlineadotexto);
+    margin-left: 15px;
+    margin-right: 15px;
+    font-family: "Open Sans", sans-serif;
+  }
+
+  .footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 250px;
+    width: 100%;
+    border: solid 1px var(--coolgrey);
+    background-color: white;
+    text-align: var(--alineado);
+  }
+  .copy {
+    color: var(--coolgrey);
+    height: 20px;
+    font-family: openSans;
+    font-size: 14px;
+    line-height: 20px;
+  }
+  .navegadorfooter {
+    display: flex;
+    flex-direction: column;
+    margin: 20px 29px 30px;
+    font-size: 14px;
+    font-weight: 600;
+    font-family: "Open Sans", sans-serif;
+    color: var(--colortexto);
+    opacity: 0.75;
+    text-transform: uppercase;
+    line-height: 20px;
+  }
+  .logo {
+    width: 116px;
+    height: 45px;
+    text-align: center;
+  }
+}
+
+/*Desktop*/
+@media all and (min-width: 1200px) {
+  .fortalezas {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 30px 15px 45px;
+    background-color: var(--coolgrey-light);
+  }
+  .rombo {
+    display: flex;
+    background-color: white;
+    height: 1.875rem;
+    width: 1.875rem;
+    transform: rotate(45deg);
+    position: absolute;
+    transform: translateY(-100%);
+  }
+
+  .articulo {
+    height: 50%;
+  }
+  .title {
+    display: inline-block;
+    font-family: "Rubik", sans-serif;
+    font-size: 22px;
+    font-weight: 600;
+    color: var(--colortitulo2);
+    line-height: var(--interlineadotitulo);
+  }
+
+  .parrafo {
+    font-size: 16px;
+    color: var(--colortexto);
+    line-height: var(--interlineadotexto);
+    margin-left: 15px;
+    margin-right: 15px;
+    font-family: "Open Sans", sans-serif;
+  }
+
+  .footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 250px;
+    width: 100%;
+    border: solid 1px var(--coolgrey);
+    background-color: white;
+    text-align: var(--alineado);
+  }
+  .copy {
+    color: var(--coolgrey);
+    height: 20px;
+    font-family: openSans;
+    font-size: 14px;
+    line-height: 20px;
+  }
+  .navegadorfooter {
+    display: flex;
+    flex-direction: column;
+    margin: 20px 29px 30px;
+    font-size: 14px;
+    font-weight: 600;
+    font-family: "Open Sans", sans-serif;
+    color: var(--colortexto);
+    opacity: 0.75;
+    text-transform: uppercase;
+    line-height: 20px;
+  }
+  .logo {
+    width: 116px;
+    height: 45px;
+    text-align: center;
+  }
 }
