--- a/css/style.css
+++ b/css/style.css
@@ -208,16 +208,20 @@ body {
 
 @media all and (min-width: 768px) {
   .nombre {
-    position: relative;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
     box-sizing: border-box;
     font-size: 16px;
+    padding: 15px 0px 15px 45px;
   }
   .enlaces {
     box-sizing: border-box;
     display: flex;
     justify-content: center;
+    align-items: center;
     position: relative;
-    top: -50px;
+    top: -52px;
     font-size: 15px;
     background-color: transparent;
     left: 239px;
@@ -235,5 +239,8 @@ body {
   }
   .equipo {
     padding-top: 45px;
+  }
+  .textoequipo {
+    /* padding: 10px 45px 30px; /* modificar */
   }
 }
