--- a/css/style.css
+++ b/css/style.css
@@ -236,4 +236,46 @@ body {
   .equipo {
     padding-top: 45px;
   }
+} /* ANA */
+
+@media all and (min-width: 768px) {
+  /* Reglas CSS que aplicaremos */
+
+  .description {
+    width: 100%;
+    color: #54585a;
+    line-height: var(--interlineadotexto);
+    font-size: 16px;
+    font-family: "Open Sans", sans-serif;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  .photo {
+    max-width: 180px;
+    max-height: 180px;
+    border-radius: 4px;
+    border: solid 5px rgba(0, 0, 0, 0.08);
+  }
+  .names {
+    font-family: "Open Sans", sans-serif;
+    font-size: 20px;
+    color: black;
+    line-height: 45px;
+  }
+
+  .text {
+    width: 80vh;
+    font-size: 16px;
+    text-align: right;
+  }
+
+  .icons {
+    color: #099d8d;
+    size: 16px;
+    padding: 30px;
+    margin-bottom: 10px;
+    line-height: 30px;
+  }
 }
