--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -191,11 +191,22 @@ body {
   margin: 15px;
 }
 .description {
+  display: flex;
   width: 100%;
   color: #54585a;
   line-height: var(--interlineadotexto);
   font-size: 16px;
   font-family: "Open Sans", sans-serif;
+}
+.description.left .box {
+  flex-direction: column;
+  align-items: flex-start;
+  margin-left: 31px;
+  text-align: left;
+}
+.description.right {
+  flex-direction: row-reverse;
+  text-align: right;
 }
 .photo {
   width: 180px;
