--- a/src/scss/core/_reset.scss
+++ b/src/scss/core/_reset.scss
@@ -1,5 +1,31 @@
+/*******************RESET***************/
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
 * {
-  box-sizing: border-box;
   margin: 0;
   padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+  color: inherit;
+}
+/* HTML5 display-role reset for older browsers */
+
+body {
+  line-height: 1;
+}
+ol,
+ul {
+  list-style: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+A {
+  text-decoration: none;
 }
