--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,43 +1,11 @@
 @import "core/variables";
 @import "core/reset";
-@import "components/code";
+/*@import "components/code";
 @import "components/links";
 @import "layout/page";
 @import "layout/header";
 @import "layout/footer";
 @import "pages/index";
-
-/*******************RESET***************/
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-* {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-  color: inherit;
-}
-/* HTML5 display-role reset for older browsers */
-
-body {
-  line-height: 1;
-}
-ol,
-ul {
-  list-style: none;
-}
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-A {
-  text-decoration: none;
-}
 
 /************************MAIN*********************/
 
