--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,11 +1,11 @@
-<footer class="page__footer">
-  <small>
-    &copy; Todos los derechos reservados
-    <include
-      src="./link.html"
-      aClass="link__adalab"
-      text="Adalab"
-      url="https://adalab.es"
-    ></include>
-  </small>
+<footer class="footer">
+  <h4 class="copy">Equipo Cabra &copy;2021</h4>
+  <nav class="navegadorfooter">
+    <a href="./index.html#equipo" target="top">Equipo</a>
+    <a href="./index.html#quienessomos" target="top">Quiénes somos</a>
+    <a href="./contacto.html" target="blank">Contacto</a>
+  </nav>
+  <p>
+    <img class="logo" src="./assets/images/logo-adalab.png" alt="logo Adalab" />
+  </p>
 </footer>
