--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,4 +1,13 @@
-<header class="page__header">
-  <img src="./assets/images/logo-adalab.png" alt="Adalab">
-  <h1>@@title</h1>
+<header class="header">
+  <div class="nombredelequipo">
+    <h1 class="nombre">Cabra</h1>
+  </div>
+
+  <nav class="enlaces">
+    <a class="link" href="./index.html#equipo">Equipo</a>
+
+    <a class="link" href="./index.html#quienessomos">Quiénes somos</a>
+
+    <a class="link" href="./contacto.html" target="blank">Contacto</a>
+  </nav>
 </header>
