--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -1,40 +1,123 @@
-<main class="page__main">
-  <h2>Este es el starter kit de Adalab</h2>
-  <p>Lo usamos para aprender:</p>
-  <ul class="main__list">
-    <li>Sass</li>
-    <li>HTML partials</li>
-    <li>Gulp</li>
-    <li>y muchas cosas más</li>
-  </ul>
-  <p>Si quieres saber cúales son las rutas correctas para:</p>
-  <ul class="main__list">
-    <li>
-      una <code class="code">&lt;img /&gt;</code> mira el fichero
-      <code class="code">./src/html/partials/header.html</code>.
-    </li>
-    <li>
-      y para un <code class="code">background-image</code> mira el fichero
-      <code class="code">./src/html/scss/layout/_page.scss</code>.
-    </li>
-  </ul>
-  <p>
-    Si quieres saber cómo usar un partial HTML dentro de otro partial, busca en la carperta
-    <code class="code">./src/html/index.html</code> y
-    <code class="code">./src/html/partials/main.html</code>, y verás cómo estamos creando estos
-    enlaces:
-  </p>
-  <ul class="main__list">
-    <li>
-      <include
-        src="./link.html"
-        aClass="link__adalab"
-        text="Adalab"
-        url="https://adalab.es"
-      ></include>
-    </li>
-    <li>
-      <include src="./link.html" text="Más info del starter kit" url="./more-info.html"></include>
-    </li>
-  </ul>
+<main class="cuerpo">
+  <hero class="hero">
+    Si quieres ir rápido, ve solo. Si quieres llegar lejos, ve acompañado.
+  </hero>
+
+  <section class="equipo1">
+    <article class="container.equipo">
+      <h1 id="equipo" class="equipo">Equipo</h1>
+      <p class="textoequipo">
+        Somos un equipo de desarrolladoras front-end. Estamos comprometidas con
+        nuestro trabajo para facilitar a los usuarios un buen rendimiento de la
+        página web. Además nos apoyamos unas en otras y siempre logramos
+        nuestros objetivos gracias a la perseverancia y la unión entre nosotras.
+      </p>
+    </article>
+  </section>
+  <div class="rombo"></div>
+  <section class="fortalezas">
+    <article class="articulo">
+      <h2 class="title">Fortalezas</h2>
+      <p class="parrafo">
+        Trabajamos unidas gracias al compromiso y la búsqueda de soluciones
+        tratando los problemas con seriedad y tintes de humor, para ello nuestra
+        diversidad de trayectorias profesionales y experiencias de vida han
+        logrado fortalecernos y unirnos como equipo.
+      </p>
+    </article>
+    <article class="articulo">
+      <h2 class="title">Debilidades</h2>
+      <p class="parrafo">
+        Las debilidades de unas pueden ser las fortalezas de otras, así que
+        remando juntas como equipo podremos superarlas y para ello estamos
+        aprendiendo, gracias a Adalab, a suplir la poca experiencia que a día de
+        hoy tenemos en el sector de la programación front-end.
+      </p>
+    </article>
+  </section>
+
+  <section id="quienessomos" class="quienessomos">
+    <h1>Quiénes somos</h1>
+    <article class="description left">
+      <img class="photo" src="./assets/images/FotoMai.jpg" alt="Foto Mai" />
+      <div class="box">
+        <h2 class="names">Maitane Abad</h2>
+        <p class="text">
+          Técnico de farmacia y parafarmacia, Community manager y futura
+          desarrolladora web. Mi objetivo con este curso es poder escribir,
+          diseñar y editar el contenido de una página web.
+        </p>
+        <div class="icons">
+          <i class="fab fa-twitter">·</i>
+          <i class="fab fa-github-alt">·</i>
+          <i class="fab fa-linkedin">·</i>
+          <i class="fas fa-envelope-square"></i>
+        </div>
+      </div>
+    </article>
+
+    <article class="description right">
+      <img class="photo" src="./assets/images/foto Ana.jpg" alt="Foto Ana" />
+      <div class="box">
+        <h2 class="names">Ana Redondo</h2>
+        <p class="text">
+          Graduada social y futura programadora front-end. Mis objetivos son
+          disfrutar de esta nueva etapa superando el reto de dedicarme a una
+          actividad laboral totalmente distinta en la que el compañerismo sea
+          nuestra filosofía de trabajo. Para ello cuento con mi determinación y
+          la inestimable ayuda de mis compañeras "cabras".
+        </p>
+
+        <div class="icons">
+          <i class="fab fa-twitter">·</i>
+          <i class="fab fa-github-alt">·</i>
+          <i class="fab fa-linkedin">·</i>
+          <i class="fas fa-envelope-square"></i>
+        </div>
+      </div>
+    </article>
+
+    <article class="description left">
+      <img
+        class="photo"
+        src="./assets/images/fotoperfilpaloma.jpg"
+        alt="Foto Paloma"
+      />
+      <div class="box">
+        <h2 class="names">Paloma Lozano</h2>
+        <p class="text">
+          Diseñadora gráfica y futura programadora web Front-end. Mis objetivos
+          son poder proporcionar a las personas una buena experiencia, de manera
+          visual y guiada, para que les parezca fácil el uso de la web y sea
+          accesible para todos.
+        </p>
+
+        <div class="icons">
+          <i class="fab fa-twitter">·</i>
+          <i class="fab fa-github-alt">·</i>
+          <i class="fab fa-linkedin">·</i>
+          <i class="fas fa-envelope-square"></i>
+        </div>
+      </div>
+    </article>
+
+    <article class="description right">
+      <img class="photo" src="./assets/images/FotoIre.jpg" alt="Foto Irene" />
+      <div class="box">
+        <h2 class="names">Irene González</h2>
+        <p class="text">
+          Conservadora y Restauradora de Bienes Culturales, futura programadora
+          Front End en busca de un giro en mi trayectoria profesional donde
+          poder evolucionar.
+        </p>
+
+        <div class="icons">
+          <i class="fab fa-twitter">·</i>
+          <i class="fab fa-github-alt">·</i>
+          <i class="fab fa-linkedin">·</i>
+          <i class="fas fa-envelope-square"></i>
+        </div>
+      </div>
+    </article>
+  </section>
 </main>
