change layout header

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -121,11 +121,13 @@
     left: 200px;
   }
   .containerequipo {
-    width: 80vh;
     text-align: center;
   }
   .equipo {
     padding-top: 0;
+  }
+  .textoequipo {
+    width: 80vh;
   }
   .equipo1 {
     flex-direction: row;
