--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
-  <h4 class="copy">Equipo Cabra &copy;2021</h4>
-  <nav class="navegadorfooter">
+  <h4 class="footer__Copy">Equipo Cabra &copy;2021</h4>
+  <nav class="footer__navigation">
     <a href="./index.html#equipo" target="top">Equipo</a>
     <a href="./index.html#quienessomos" target="top">Quiénes somos</a>
     <a href="./contacto.html" target="blank">Contacto</a>
