--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -15,19 +15,19 @@
     </article>
   </section>
   <div class="rombo"></div>
-  <section class="fortalezas">
-    <article class="articulo">
-      <h2 class="title">Fortalezas</h2>
-      <p class="parrafo">
+  <section class="main__strong">
+    <article class="main__strong--article">
+      <h2 class="main__strong--title">Fortalezas</h2>
+      <p class="main__strong--paragraph">
         Trabajamos unidas gracias al compromiso y la búsqueda de soluciones
         tratando los problemas con seriedad y tintes de humor, para ello nuestra
         diversidad de trayectorias profesionales y experiencias de vida han
         logrado fortalecernos y unirnos como equipo.
       </p>
     </article>
-    <article class="articulo">
-      <h2 class="title">Debilidades</h2>
-      <p class="parrafo">
+    <article class="main__strong--article">
+      <h2 class="main__strong--title">Debilidades</h2>
+      <p class="main__strong--paragraph">
         Las debilidades de unas pueden ser las fortalezas de otras, así que
         remando juntas como equipo podremos superarlas y para ello estamos
         aprendiendo, gracias a Adalab, a suplir la poca experiencia que a día de
