--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -7,58 +7,30 @@
   border: solid 1px var(--coolgrey);
   background-color: white;
   text-align: var(--alineado);
+
+  @media all and (min-width: 768px) {
+    flex-direction: row;
+    justify-content: space-between;
+  }
 }
-.copy {
-  color: var(--coolgrey);
-  height: 20px;
-  font-family: openSans;
-  font-size: 14px;
-  line-height: 20px;
+.footer__copy {
+  @include textcopy;
 }
-.navegadorfooter {
+.footer__navigation {
   display: flex;
   flex-direction: column;
   margin: 20px 29px 30px;
-  font-size: 14px;
-  font-weight: 600;
-  font-family: "Open Sans", sans-serif;
-  color: var(--colortexto);
-  opacity: 0.75;
-  text-transform: uppercase;
-  line-height: 20px;
+  @include textfooternavigation;
 }
 .logo {
   width: 116px;
   height: 45px;
   text-align: center;
-}
 
-/*****************Tablet*****************/
-@media all and (min-width: 768px) {
-  /*IRENE*/
-
-  .footer {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-  }
-  .copy {
-  }
-  .navegadorfooter {
-  }
-  .logo {
+  @media all and (min-width: 768px) {
     position: absolute;
     left: 0em;
   }
 }
-/*****************Desktop*****************/
-@media all and (min-width: 1200px) {
-  .footer {
-  }
-  .copy {
-  }
-  .navegadorfooter {
-  }
-  .logo {
-  }
-}
+
+/*****************Desktop*******1200px**********/
