add container hero

--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -1,7 +1,9 @@
 <main class="cuerpo">
-  <hero class="hero">
-    Si quieres ir rápido, ve solo. Si quieres llegar lejos, ve acompañado.
-  </hero>
+  <div class="container_hero">
+    <hero class="hero">
+      Si quieres ir rápido, ve solo. Si quieres llegar lejos, ve acompañado.
+    </hero>
+  </div>
 
   <section class="equipo1">
     <article class="container.equipo">
