add styles main scss

--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -40,16 +40,16 @@
 
   <section id="quienessomos" class="quienessomos">
     <h1>Quiénes somos</h1>
-    <article class="description left">
+    <article class="descriptionleft">
       <img class="photo" src="./assets/images/FotoMai.jpg" alt="Foto Mai" />
       <div class="box">
         <h2 class="names">Maitane Abad</h2>
-        <p class="text">
+        <p class="textleft">
           Técnico de farmacia y parafarmacia, Community manager y futura
           desarrolladora web. Mi objetivo con este curso es poder escribir,
           diseñar y editar el contenido de una página web.
         </p>
-        <div class="icons">
+        <div class="iconsleft">
           <i class="fab fa-twitter">·</i>
           <i class="fab fa-github-alt">·</i>
           <i class="fab fa-linkedin">·</i>
@@ -58,11 +58,11 @@
       </div>
     </article>
 
-    <article class="description right">
+    <article class="descriptionright">
       <img class="photo" src="./assets/images/foto Ana.jpg" alt="Foto Ana" />
-      <div class="box">
+      <div class="boxright">
         <h2 class="names">Ana Redondo</h2>
-        <p class="text">
+        <p class="textright">
           Graduada social y futura programadora front-end. Mis objetivos son
           disfrutar de esta nueva etapa superando el reto de dedicarme a una
           actividad laboral totalmente distinta en la que el compañerismo sea
@@ -70,7 +70,7 @@
           la inestimable ayuda de mis compañeras "cabras".
         </p>
 
-        <div class="icons">
+        <div class="iconsright">
           <i class="fab fa-twitter">·</i>
           <i class="fab fa-github-alt">·</i>
           <i class="fab fa-linkedin">·</i>
@@ -79,7 +79,7 @@
       </div>
     </article>
 
-    <article class="description left">
+    <article class="descriptionleft">
       <img
         class="photo"
         src="./assets/images/fotoperfilpaloma.jpg"
@@ -87,14 +87,14 @@
       />
       <div class="box">
         <h2 class="names">Paloma Lozano</h2>
-        <p class="text">
+        <p class="textleft">
           Diseñadora gráfica y futura programadora web Front-end. Mis objetivos
           son poder proporcionar a las personas una buena experiencia, de manera
           visual y guiada, para que les parezca fácil el uso de la web y sea
           accesible para todos.
         </p>
 
-        <div class="icons">
+        <div class="iconsleft">
           <i class="fab fa-twitter">·</i>
           <i class="fab fa-github-alt">·</i>
           <i class="fab fa-linkedin">·</i>
@@ -103,17 +103,17 @@
       </div>
     </article>
 
-    <article class="description right">
+    <article class="descriptionright">
       <img class="photo" src="./assets/images/FotoIre.jpg" alt="Foto Irene" />
-      <div class="box">
+      <div class="boxright">
         <h2 class="names">Irene González</h2>
-        <p class="text">
+        <p class="textright">
           Conservadora y Restauradora de Bienes Culturales, futura programadora
           Front End en busca de un giro en mi trayectoria profesional donde
           poder evolucionar.
         </p>
 
-        <div class="icons">
+        <div class="iconsright">
           <i class="fab fa-twitter">·</i>
           <i class="fab fa-github-alt">·</i>
           <i class="fab fa-linkedin">·</i>
