--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -3,35 +3,52 @@
   flex-direction: column;
   justify-content: center;
   height: 250px;
-  width: 100%;
   border: solid 1px var(--coolgrey);
   background-color: white;
-  text-align: var(--alineado);
 
   @media all and (min-width: 768px) {
+    height: 170px;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
+  }
+  @media all and (min-width: 1200px) {
+    height: 161px;
   }
 
   &__copy {
     @include textcopy;
+    @media all and (min-width: 768px) {
+      position: relative;
+      left: 45px;
+      top: -30px;
+    }
+    @media all and (min-width: 1200px) {
+      left: 138px;
+    }
   }
   &__navigation {
     display: flex;
     flex-direction: column;
     margin: 20px 29px 30px;
     @include textfooternavigation;
+    @media all and (min-width: 768px) {
+      text-align: right;
+      order: 1;
+    }
   }
 }
 
 .logo {
   width: 116px;
   height: 45px;
-  text-align: center;
 
   @media all and (min-width: 768px) {
     position: absolute;
-    left: 0em;
+    left: 45px;
+  }
+  @media all and (min-width: 1200px) {
+    left: 138px;
   }
 }
 
