--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -77,8 +77,7 @@
   display: flex;
   flex-direction: column;
   padding: 30px 15px 20px;
-  font-family: "Open Sans", sans-serif;
-  font-size: 16px;
+  @include text;
 }
 
 /*****************Tablet*****************/
@@ -122,7 +121,6 @@
     padding-bottom: 0;
   }
   .textoequipo {
-    width: 80vh;
     padding-bottom: 20px;
   }
   .equipo1 {
