add style to quienes somos

--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -39,7 +39,7 @@
   </section>
 
   <section id="quienessomos" class="quienessomos">
-    <h1>Quiénes somos</h1>
+    <h1 class="whoarewe">Quiénes somos</h1>
     <article class="descriptionleft">
       <img class="photo" src="./assets/images/FotoMai.jpg" alt="Foto Mai" />
       <div class="box">
