--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -46,7 +46,11 @@
 /*****************Tablet*****************/
 @media all and (min-width: 768px) {
   /* ANA */
-
+  .whoarewe {
+    color: var(--colortitulo2);
+    text-transform: uppercase;
+    padding: 45px 0 41px 0;
+  }
   .photo {
     max-width: 180px;
     max-height: 180px;
