change padding header media 768px

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -124,7 +124,7 @@
     padding-bottom: 0;
   }
   .textoequipo {
-    padding-bottom: 20px;
+    padding: 20px 45px 20px;
   }
   .equipo1 {
     flex-direction: row;
