--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -12,8 +12,15 @@
   text-align: center;
   margin: 15px;
 }
+.whoarewe {
+  color: var(--colortitulo2);
+  text-transform: uppercase;
+  padding: 45px 0 41px 0;
+}
 .description {
   display: flex;
+  align-items: center;
+  flex-direction: column;
   width: 100%;
   color: #54585a;
   line-height: var(--interlineadotexto);
@@ -46,11 +53,7 @@
 /*****************Tablet*****************/
 @media all and (min-width: 768px) {
   /* ANA */
-  .whoarewe {
-    color: var(--colortitulo2);
-    text-transform: uppercase;
-    padding: 45px 0 41px 0;
-  }
+
   .photo {
     max-width: 180px;
     max-height: 180px;
