--- a/src/scss/components/_contact.scss
+++ b/src/scss/components/_contact.scss
@@ -5,56 +5,37 @@
   width: 100%;
   height: 421px;
 }
-
+*/
 .campos {
   color: #54585a;
   margin-bottom: 60px;
 }
-.element {
-  display: block;
-}*/
+
+body {
+  font-size: 14px;
+  font-family: "Open Sans", sans-serif;
+}
+
 .main {
   margin: 20px;
 }
 .form {
   display: block;
   border: solid 1px gray;
-  margin: 10px;
+  margin: 10px 0 10px 0;
+  width: 100%;
 }
 .label {
   display: block;
-  width: 18vw;
-}
-.email {
-  display: block;
-  height: 20px;
-}
-.password {
-  display: block;
-  height: 20px;
-}
-.birthday {
-  margin: 10px 0px 10px 0px;
 }
 
-.genre {
-  display: flex;
-  padding: 30px 0px 20px 0px;
-}
-textarea {
-  display: block;
-  margin-bottom: 20px;
-}
-.number {
-  display: block;
-}
-.submit {
-  display: block;
-  margin-top: 20px;
-  padding: 10px;
-  width: 150px;
-  height: 70px;
-  border-radius: 20%;
-  background-color: green;
+.input {
+  font-family: "Open Sans", sans-serif;
   color: white;
+  background-color: #099d8d;
+  height: 45px;
+  width: 100%;
+  border-radius: 4px;
+  margin-top: 30px;
+  text-align: center;
 }
