--- a/src/scss/components/_contact.scss
+++ b/src/scss/components/_contact.scss
@@ -1,7 +1,7 @@
 /*.header {
   /* no consigo poner la imagen*/
 /* background-size: cover;
-  background-image: url(./images/altavoz-barato-1-2-3.jpg);
+  background-image: url(.relojito);
   width: 100%;
   height: 421px;
 }
