--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -93,7 +93,7 @@
     padding: 15px 45px 15px 45px;
   }
   .enlaces {
-    justify-content: end;
+    justify-content: flex-end;
 
     position: relative;
     top: -54px;
