--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -11,12 +11,24 @@
   color: var(--colortitulo2);
   text-align: center;
   margin: 15px;
+
+  @media all and (min-width: 1200px) {
+    display: flex;
+    padding-left: 10%;
+    padding-right: 10%;
+  }
 }
+
 .whoarewe {
   color: var(--colortitulo2);
   text-transform: uppercase;
   padding: 45px 0 41px 0;
+
+  @media all and (min-width: 1200px) {
+    padding-bottom: 10%;
+  }
 }
+
 .description {
   display: flex;
   align-items: center;
@@ -26,6 +38,32 @@
   line-height: var(--interlineadotexto);
   font-size: 16px;
   font-family: "Open Sans", sans-serif;
+
+  @media all and (min-width: 1200px) {
+    .descriptionleft {
+      font-size: 30px;
+      padding: 20px;
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-start;
+    }
+  }
+
+  @media all and (min-width: 1200px) {
+    .descriptionright {
+      font-size: 30px;
+      padding: 20px;
+      display: flex;
+      flex-direction: row-reverse;
+      justify-content: flex-end;
+    }
+  }
+}
+
+.text {
+  @media all and (min-width: 1200px) {
+    padding: 15px;
+  }
 }
 
 .photo {
@@ -33,6 +71,11 @@
   height: 180px;
   border-radius: 4px;
   border: solid 5px rgba(0, 0, 0, 0.08);
+
+  @media all and (min-width: 1200px) {
+    width: 278px;
+    height: 278px;
+  }
 }
 .names {
   text-align: center;
@@ -40,6 +83,10 @@
   font-size: 20px;
   color: black;
   line-height: 45px;
+
+  @media all and (min-width: 1200px) {
+    padding: 15px;
+  }
 }
 .icons {
   align-items: center;
@@ -48,6 +95,12 @@
   padding: 30px;
   margin-bottom: 10px;
   line-height: 30px;
+
+  @media all and (min-width: 1200px) {
+    padding-top: 15px;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
 }
 
 /*****************Tablet*****************/
@@ -55,8 +108,8 @@
   /* ANA */
 
   .photo {
-    max-width: 180px;
-    max-height: 180px;
+    width: 205px;
+    height: 205px;
     border-radius: 4px;
     border: solid 5px rgba(0, 0, 0, 0.08);
   }
@@ -92,7 +145,7 @@
     text-align: left;
   }
   .textright {
-    width: 650px;
+    width: 443px;
     height: 142px;
     font-size: 16px;
     text-align: right;
@@ -116,35 +169,3 @@
   .textoequipo {
   } /* padding: 10px 45px 30px; /* modificar */
 }
-
-/****************************** VISTA DESDE DESKTOP **************************/
-
-@media screen and (min-width: 1200px) {
-  .quienessomos {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    color: #54585a;
-  }
-
-  .description {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-  }
-  .box {
-    width: 700px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-  }
-
-  .photo {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    margin: 30px;
-  }
-}
-
-/* FIN DE VISTA DESDE DESKTOP */
