--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -53,6 +53,9 @@
 /*****************Tablet*****************/
 @media all and (min-width: 768px) {
   /* ANA */
+  .quienessomos {
+    margin: 0 45px 0 45px;
+  }
 
   .photo {
     max-width: 180px;
@@ -75,6 +78,12 @@
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+    margin-left: 30px;
+    margin-right: 22px;
+  }
+  .boxleft {
+    margin-right: 30px;
+    margin-left: 22px;
   }
 
   .names {
@@ -86,14 +95,11 @@
   }
 
   .textleft {
-    width: 443px;
-    height: 142px;
+    margin-right: 44px;
     font-size: 16px;
     text-align: left;
   }
   .textright {
-    width: 650px;
-    height: 142px;
     font-size: 16px;
     text-align: right;
   }
