--- a/src/scss/components/_contact.scss
+++ b/src/scss/components/_contact.scss
@@ -20,22 +20,32 @@ body {
   margin: 20px;
 }
 .form {
-  display: block;
+  box-sizing: border-box;
   border: solid 1px gray;
   margin: 10px 0 10px 0;
   width: 100%;
+  height: 45px;
+  padding-left: 15px;
 }
 .label {
   display: block;
+  text-align: initial;
 }
 
+.form_comment {
+  box-sizing: border-box;
+  border: solid 1px gray;
+  margin: 10px 0 10px 0;
+  width: 100%;
+  height: 105px;
+  padding-left: 15px;
+}
 .input {
-  font-family: "Open Sans", sans-serif;
   color: white;
   background-color: #099d8d;
   height: 45px;
   width: 100%;
   border-radius: 4px;
-  margin-top: 30px;
+  margin: 30px 0 60px 0;
   text-align: center;
 }
