--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -20,13 +20,10 @@
 }
 
 .whoarewe {
-  color: var(--colortitulo2);
+  @include greentitle;
+  margin-top: 45px;
+  margin-bottom: 45px;
   text-transform: uppercase;
-  padding: 45px 0 41px 0;
-
-  @media all and (min-width: 1200px) {
-    padding-bottom: 10%;
-  }
 }
 
 .description {
@@ -38,13 +35,13 @@
   line-height: var(--interlineadotexto);
   font-size: 16px;
   font-family: "Open Sans", sans-serif;
+
   @media screen and (min-width: 1200px) {
     margin-bottom: 60px;
   }
 
   @media all and (min-width: 1200px) {
     .descriptionleft {
-      font-size: 30px;
       padding: 20px;
       display: flex;
       flex-direction: row;
@@ -54,7 +51,6 @@
 
   @media all and (min-width: 1200px) {
     .descriptionright {
-      font-size: 30px;
       padding: 20px;
       display: flex;
       flex-direction: row-reverse;
@@ -63,17 +59,10 @@
   }
 }
 
-.text {
-  @media all and (min-width: 1200px) {
-    width: 439px;
-    height: 138px;
-  }
-}
-
 .boxright {
   @media all and (min-width: 1200px) {
     margin-right: 138px;
-    margin-left: px;
+    margin-left: 300px;
   }
 }
 
@@ -89,6 +78,7 @@
   border-radius: 4px;
   border: solid 5px rgba(0, 0, 0, 0.08);
 }
+
 .names {
   text-align: center;
   font-family: "Open Sans", sans-serif;
@@ -111,13 +101,14 @@
 /*****************Tablet*****************/
 @media all and (min-width: 768px) {
   /* ANA */
+
   .quienessomos {
-    margin: 0 45px 0 45px;
+    margin: 0px 45px 0px 45px;
   }
 
   .photo {
-    width: 205px;
-    height: 205px;
+    max-width: 205px;
+    max-height: 205px;
     border-radius: 4px;
     border: solid 5px rgba(0, 0, 0, 0.08);
   }
@@ -125,7 +116,6 @@
     display: flex;
     flex-direction: row;
     align-items: flex-start;
-    margin-left: 31px;
     text-align: left;
   }
   .descriptionright {
@@ -178,11 +168,10 @@
   }
 }
 
-/*photo vista DESKTOP*/
-
-@media all and (min-width: 1200px) {
-  .photo {
-    width: 278px;
-    height: 278px;
+/*vista photo DESKTOP*/
+.photo {
+  @media all and (min-width: 1200px) {
+    max-width: 278px;
+    max-height: 278px;
   }
 }
