--- a/src/scss/components/_contact.scss
+++ b/src/scss/components/_contact.scss
@@ -1,11 +1,10 @@
-/*.header {
+.header {
   /* no consigo poner la imagen*/
-/* background-size: cover;
-  background-image: url(.relojito);
+  background-size: cover;
+  background-image: url(../images/altavoz-barato-1-2-3.jpg);
   width: 100%;
   height: 421px;
 }
-*/
 .campos {
   color: #54585a;
   margin-bottom: 60px;
