--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -35,6 +35,10 @@
     @media all and (min-width: 768px) {
       text-align: right;
       order: 1;
+      margin-right: 45px;
+    }
+    @media all and (min-width: 1200px) {
+      margin-right: 138px;
     }
   }
 }
