change icons padding

--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -157,14 +157,14 @@
     size: 16px;
     display: flex;
     justify-content: left;
-    padding-left: 0;
+    padding: 15px 0 0 0;
   }
   .iconsright {
     color: #099d8d;
     size: 16px;
     display: flex;
     justify-content: right;
-    padding-right: 0;
+    padding: 15px 0 0 0;
   }
 }
 
