change icons padding

--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -157,7 +157,7 @@
     size: 16px;
     display: flex;
     justify-content: left;
-    padding-right: 0;
+    padding-left: 0;
   }
   .iconsright {
     color: #099d8d;
