--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -60,6 +60,7 @@
   @media all and (min-width: 1200px) {
     margin-right: 138px;
     margin-left: 300px;
+    width: 1000px;
   }
 }
 
@@ -67,6 +68,7 @@
   @media all and (min-width: 1200px) {
     margin-right: 300px;
     margin-left: 138px;
+    width: 1000px;
   }
 }
 .photo {
