put links into the icons

--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -51,9 +51,16 @@
         </p>
         <div class="icons iconsleft">
           <i class="fab fa-twitter"> · </i>
-          <i class="fab fa-github-alt"> · </i>
-          <i class="fab fa-linkedin"> · </i>
-          <i class="fas fa-envelope-square"></i>
+
+          <a href="https://github.com/MaitaneAbad">
+            <i class="fab fa-github-alt"> · </i></a
+          >
+          <a href="https://www.linkedin.com/in/maitane-abad-conde-b162a1165/"
+            ><i class="fab fa-linkedin"> · </i></a
+          >
+          <a href="mailto:maitaneabadconde@gmail.com"
+            ><i class="fas fa-envelope-square"></i
+          ></a>
         </div>
       </div>
     </article>
@@ -70,9 +77,15 @@
         </p>
         <div class="icons iconsright">
           <i class="fab fa-twitter"> · </i>
-          <i class="fab fa-github-alt"> · </i>
-          <i class="fab fa-linkedin"> · </i>
-          <i class="fas fa-envelope-square"></i>
+          <a href="https://github.com/dunayari"
+            ><i class="fab fa-github-alt"> · </i></a
+          >
+          <a href="http://linkedin.com/in/ana-mar%C3%ADa-redondo-gil-83254a110"
+            ><i class="fab fa-linkedin"> · </i></a
+          >
+          <a href="mailto:anaredondogil@gmail.com"
+            ><i class="fas fa-envelope-square"></i
+          ></a>
         </div>
       </div>
     </article>
@@ -94,9 +107,15 @@
 
         <div class="icons iconsleft">
           <i class="fab fa-twitter"> · </i>
-          <i class="fab fa-github-alt"> · </i>
-          <i class="fab fa-linkedin"> · </i>
-          <i class="fas fa-envelope-square"></i>
+          <a href="https://github.com/PalomaLozano"
+            ><i class="fab fa-github-alt"> · </i></a
+          >
+          <a href="https://www.linkedin.com/in/paloma-lozano/"
+            ><i class="fab fa-linkedin"> · </i></a
+          >
+          <a href="mailto:palomalogu9@gmail.com"
+            ><i class="fas fa-envelope-square"></i
+          ></a>
         </div>
       </div>
     </article>
@@ -113,9 +132,15 @@
 
         <div class="icons iconsright">
           <i class="fab fa-twitter"> · </i>
-          <i class="fab fa-github-alt"> · </i>
-          <i class="fab fa-linkedin"> · </i>
-          <i class="fas fa-envelope-square"></i>
+          <a href="https://github.com/IreGonzalez"
+            ><i class="fab fa-github-alt"> · </i></a
+          >
+          <a href="https://www.linkedin.com/in/iregonzalez/"
+            ><i class="fab fa-linkedin"> · </i></a
+          >
+          <a href="mailto:irenegonzalezpinilla@gmail.com"
+            ><i class="fas fa-envelope-square"></i
+          ></a>
         </div>
       </div>
     </article>
