--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -7,6 +7,6 @@
 
     <a class="link" href="./index.html#quienessomos">Quiénes somos</a>
 
-    <a class="link" href="./contacto.html" target="blank">Contacto</a>
+    <a class="link" href="./contacto.html" target="_blank">Contacto</a>
   </nav>
 </header>
