put title into the links

--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -53,13 +53,13 @@
           <i class="fab fa-twitter"> · </i>
 
           <a href="https://github.com/MaitaneAbad">
-            <i class="fab fa-github-alt"> · </i></a
+            <i class="fab fa-github-alt" title="Github Maitane"> · </i></a
           >
           <a href="https://www.linkedin.com/in/maitane-abad-conde-b162a1165/"
-            ><i class="fab fa-linkedin"> · </i></a
+            ><i class="fab fa-linkedin" title="Linkedin Maitane"> · </i></a
           >
           <a href="mailto:maitaneabadconde@gmail.com"
-            ><i class="fas fa-envelope-square"></i
+            ><i class="fas fa-envelope-square" title="Correo Maitane"></i
           ></a>
         </div>
       </div>
@@ -78,13 +78,13 @@
         <div class="icons iconsright">
           <i class="fab fa-twitter"> · </i>
           <a href="https://github.com/dunayari"
-            ><i class="fab fa-github-alt"> · </i></a
+            ><i class="fab fa-github-alt" title="Github Ana"> · </i></a
           >
           <a href="http://linkedin.com/in/ana-mar%C3%ADa-redondo-gil-83254a110"
-            ><i class="fab fa-linkedin"> · </i></a
+            ><i class="fab fa-linkedin" title="Linkedin Ana"> · </i></a
           >
           <a href="mailto:anaredondogil@gmail.com"
-            ><i class="fas fa-envelope-square"></i
+            ><i class="fas fa-envelope-square" title="Correo Ana"></i
           ></a>
         </div>
       </div>
@@ -108,13 +108,13 @@
         <div class="icons iconsleft">
           <i class="fab fa-twitter"> · </i>
           <a href="https://github.com/PalomaLozano"
-            ><i class="fab fa-github-alt"> · </i></a
+            ><i class="fab fa-github-alt" title="Github Paloma"> · </i></a
           >
           <a href="https://www.linkedin.com/in/paloma-lozano/"
-            ><i class="fab fa-linkedin"> · </i></a
+            ><i class="fab fa-linkedin" title="Linkedin Paloma"> · </i></a
           >
           <a href="mailto:palomalogu9@gmail.com"
-            ><i class="fas fa-envelope-square"></i
+            ><i class="fas fa-envelope-square" title="Correo Paloma"></i
           ></a>
         </div>
       </div>
@@ -133,13 +133,13 @@
         <div class="icons iconsright">
           <i class="fab fa-twitter"> · </i>
           <a href="https://github.com/IreGonzalez"
-            ><i class="fab fa-github-alt"> · </i></a
+            ><i class="fab fa-github-alt" title="Github Irene"> · </i></a
           >
           <a href="https://www.linkedin.com/in/iregonzalez/"
-            ><i class="fab fa-linkedin"> · </i></a
+            ><i class="fab fa-linkedin" title="Linkedin Irene"> · </i></a
           >
           <a href="mailto:irenegonzalezpinilla@gmail.com"
-            ><i class="fas fa-envelope-square"></i
+            ><i class="fas fa-envelope-square" title="Correo Irene"></i
           ></a>
         </div>
       </div>
